[gd_scene load_steps=3 format=3 uid="uid://jhdlqsokif5o"]

[ext_resource type="Script" path="res://logic/lobby.gd" id="1"]
[ext_resource type="Theme" uid="uid://b13x1qjre0235" path="res://stuff/ui_theme.tres" id="1_w2ppd"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource("1_w2ppd")
script = ExtResource("1")

[node name="Players" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -173.5
offset_top = -197.0
offset_right = 173.5
offset_bottom = 197.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Players"]
layout_mode = 2

[node name="Label" type="Label" parent="Players/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
text = "Awaiting for players..."
horizontal_alignment = 1

[node name="List" type="ItemList" parent="Players/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Start" type="Button" parent="Players/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 10
text = "Start game!"

[node name="Connect" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.0
offset_top = -85.5
offset_right = 185.0
offset_bottom = 85.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Connect"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Connect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
text = "Start new Game"
horizontal_alignment = 1

[node name="Name" type="LineEdit" parent="Connect/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
placeholder_text = "Type your name"
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ErrorLabel" type="Button" parent="Connect/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.820312, 0.291595, 0.291595, 1)

[node name="Join" type="Button" parent="Connect/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
disabled = true
text = "Join"
metadata/_edit_use_anchors_ = true

[node name="ButtonsContainer" type="HBoxContainer" parent="Connect/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Host" type="Button" parent="Connect/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
size_flags_vertical = 3
text = "I'm the Server.."
metadata/_edit_use_anchors_ = true

[node name="FindServerBtn" type="Button" parent="Connect/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Find server.."
metadata/_edit_use_anchors_ = true

[node name="ErrorDialog" type="AcceptDialog" parent="."]

[node name="FindServerTimeout" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="Players/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="text_changed" from="Connect/VBoxContainer/Name" to="." method="_on_name_text_changed"]
[connection signal="pressed" from="Connect/VBoxContainer/Join" to="." method="_on_connect_to_server_pressed"]
[connection signal="pressed" from="Connect/VBoxContainer/ButtonsContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Connect/VBoxContainer/ButtonsContainer/FindServerBtn" to="." method="_on_find_avail_servers_pressed"]
[connection signal="timeout" from="FindServerTimeout" to="." method="_on_find_server_timeout_timeout"]
